# ShadowObj2Points

./: .gitignore  3rd_party  AGENTS.md  assets  data  environment.yml  pyproject.toml  requirements.txt  run_multi.sh  run_single.sh  shadowobj2points.md  third_party  train.py
configs/: config.yaml
configs/backbone/: point_patch_embedding.yaml  point_transformer.yaml  pointnet2.yaml  pointnext.yaml  pointnext_heavier.yaml  ptv3.yaml  ptv3_light.yaml  ptv3_sparse.yaml  ptv3_sparse_fourier.yaml  ptv3_sparse_perceiver.yaml  sonata.yaml
configs/callbacks/: default.yaml
configs/datamodule/: handencoder_dm_bodex.yaml  handencoder_dm_bodex_debug.yaml  handencoder_dm_dex.yaml  handencoder_dm_dex_debug.yaml  mybodexshadow_debug.yaml  mydexgraspnet_debug.yaml
configs/dit/: graph_dit_default.yaml
configs/experiment/: base.yaml  debug.yaml
configs/experiments/: deter.yaml  multi_gpu.yaml  multi_gpu_4.yaml  profiler.yaml  profiler_gpu.yaml
configs/hand_encoder/: egnn_lite.yaml  transformer_bias.yaml
configs/hydra/: default.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/loss/: deterministic_regression.yaml  flow_matching.yaml  flow_matching_curriculum.yaml  total_loss.yaml
configs/model/: deterministic_hand_dit.yaml  flow_matching_hand_dit.yaml  hand_points_recon.yaml  hand_pose_recon.yaml  hand_pose_recon_transformer.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/trainer/: debug.yaml  default.yaml  fast_dev.yaml
configs/velocity_strategy/: direct.yaml  direct_free.yaml  direct_tangent.yaml  (+4 more)
scripts/: convert_pcds_to_hdf5.py
(+70 files in other folders)
